cpp/hello-world/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.004s
user	0m0.002s
sys	0m0.002s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
[ 25%] Building CXX object CMakeFiles/hello-world.dir/hello_world_test.cpp.o
[ 50%] Building CXX object CMakeFiles/hello-world.dir/hello_world.cpp.o
[ 75%] Building CXX object CMakeFiles/hello-world.dir/test/tests-main.cpp.o
[100%] Linking CXX executable hello-world
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
[100%] Built target hello-world
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
===============================================================================
All tests passed (1 assertion in 1 test case)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
[100%] Built target test_hello-world
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/hello-world.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/hello-world.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)$"
./build/CMakeFiles/hello-world.dir/hello_world_test.cpp.gcno
./build/CMakeFiles/hello-world.dir/hello_world.cpp.gcno
./build/CMakeFiles/hello-world.dir/hello_world.cpp.gcda
./build/CMakeFiles/hello-world.dir/hello_world_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
hello_world.cpp                                1       1   100%   
hello_world_test.cpp                           3       3   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         38      31    81%
------------------------------------------------------------------------------
lines: 81.6% (31 out of 38)
branches: 28.6% (8 out of 28)

real	0m9.165s
user	0m8.313s
sys	0m0.844s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.224s
user	0m0.178s
sys	0m0.047s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.198s
user	0m0.139s
sys	0m0.059s

===============================================================================

Running: clang-format-16 -style=file -i ./hello_world.cpp ./hello_world_test.cpp ./hello_world.h

real	0m0.020s
user	0m0.009s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./hello_world.cpp ./hello_world_test.cpp ./hello_world.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/hello_world.h:8:10: fatal error: 'string' file not found
#include <string>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/hello_world.h.

real	0m0.544s
user	0m0.491s
sys	0m0.053s


real	0m0.546s
user	0m0.492s
sys	0m0.053s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11382 warnings generated.
46771 warnings generated.
46771 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/hello_world.h.
Suppressed 46776 warnings (46771 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.209s
user	0m6.139s
sys	0m0.069s
Running: clang-tidy-16 ./hello_world.cpp ./hello_world_test.cpp ./hello_world.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/hello-world/hello_world.h:8:10: error: 'string' file not found [clang-diagnostic-error]
#include <string>
         ^~~~~~~~


real	0m6.212s
user	0m6.140s
sys	0m0.073s

===============================================================================

